Update bookmakr api and add sources by requests * https://bneibaruch.slack.com/archives/C0537EV685B/p1704683922104269 * https://bneibaruch.slack.com/archives/C0537EV685B/p1704684239780159
