# internal/api/router.go
@@ -14,7 +14,7 @@ func NewRouter(handler *Handler) http.Handler {
 
 	v1 := router.Group("/api/v1")
 
-	v1.POST("/bookmark/:slide_id", handler.AddUserBookmark)
+	v1.POST("/bookmark", handler.AddUserBookmark)
 	v1.GET("/bookmark", handler.GetUserBookmarks)
 	v1.PATCH("/bookmark", handler.UpdateUserBookmark)
 	v1.DELETE("/bookmark/:bookmark_id", handler.DeleteUserBookmark)
